8267532: C2: Profile and prune untaken exception handlers 8310011: Arena with try-with-resources is slower than it should be
Reviewed-by: thartmann, vlivanov